--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.17.5",
+    "framer-motion": "^11.11.11",
+    "hamburger-react": "^2.5.1",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
