added intro section

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,8 @@
   "plugins": ["import"],
   "rules": {
     "tailwindcss/no-custom-classname": "off",
+    "tailwindcss/migration-from-tailwind-2": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-require-imports": "off",
     "import/order": [
       "error",
